task3/ingress-wp.yaml
# Ingress controller for accessing application by internet
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: wordpress-ingress
  namespace: vlad
spec:
  rules:
  - host: wordpress-vlad.kubelab.spainip.es
    http:
      paths:
      - backend:
          service:
            name: wordpress
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - wordpress-vlad.kubelab.spainip.es
    secretName: tls-wordpress-ingress
